--- a/history.html
+++ b/history.html
@@ -20,6 +20,9 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" />
 
+    <!-- AoS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <title>Atma Asta</title>
   </head>
   <body>
@@ -54,7 +57,7 @@
         <img src="img/font-atma.gif" alt="Atma Asta" style="width: auto; height: 100px" />
       </div>
       <div class="row g-3 py-2 align-items-end">
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-3" data-aos="fade-up">
           <a class="history-logo btn" href="" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <img class="logo2016 py-4" src="img/tulisan-bandung.svg" alt="" width="100%" />
           </a>
@@ -66,7 +69,7 @@
             <!-- akhir embed video -->
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-3" data-aos="fade-up">
           <a class="history-logo" href="" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <img class="logo2018 py-4" src="img/tulisan-hifestus.svg" alt="" width="100%" />
           </a>
@@ -78,7 +81,7 @@
             <!-- akhir embed video -->
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-3" data-aos="fade-up">
           <a class="history-logo" href="" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <img class="logo2019 py-4" src="img/tulisan-ratetra.svg" alt="" width="100%" />
           </a>
@@ -90,7 +93,7 @@
             <!-- akhir embed video -->
           </div>
         </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
+        <div class="col-sm-12 col-md-6 col-lg-3" data-aos="fade-up">
           <a class="history-logo" href="" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <img class="logo2020 py-4" src="img/tulisan-rhemura.svg" alt="" width="100%" />
           </a>
@@ -174,6 +177,12 @@
       navbarbg();
       navbarcollapse();
       modal();
+    </script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 900,
+      });
     </script>
   </body>
 </html>
