--- a/index.html
+++ b/index.html
@@ -111,60 +111,62 @@
     <!-- akhir slider -->
 
     <!-- grid gallery -->
-    <div class="container grid-history">
-      <h1 style="font-family: 'bubblegum sans', sans-serif" class="text-center">Check This Out</h1>
-      <div class="row g-3 py-4 justify-content-center">
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card" data-aos="fade-up">
-            <div class="ratio ratio-16x9">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/7WymqdnosNI"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </div>
-            <div class="card-body tmst" style="background-color: #ffd596">
-              <h5 class="card-title">COMING SOON!</h5>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card" data-aos="fade-up">
-            <div class="ratio ratio-16x9">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/NgZMpMsef-c"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </div>
-            <div class="card-body tmst" style="background-color: #9edda9">
-              <h5 class="card-title">ETHERMA : INTRO</h5>
+    <div class="container-fluid grid-gallery">
+      <div class="container p-5">
+        <h1 style="font-family: 'bubblegum sans', sans-serif" class="text-center">Check This Out</h1>
+        <div class="row g-3 py-4 justify-content-center">
+          <div class="col-sm-12 col-md-6 col-lg-3">
+            <div class="card" data-aos="fade-up">
+              <div class="ratio ratio-16x9">
+                <iframe
+                  width="560"
+                  height="315"
+                  src="https://www.youtube.com/embed/7WymqdnosNI"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+              </div>
+              <div class="card-body tmst" style="background-color: #ffd596">
+                <h5 class="card-title">COMING SOON!</h5>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
-          <div class="card" data-aos="fade-up">
-            <div class="ratio ratio-16x9">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/BMdw92c2I78"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
+          <div class="col-sm-12 col-md-6 col-lg-3">
+            <div class="card" data-aos="fade-up">
+              <div class="ratio ratio-16x9">
+                <iframe
+                  width="560"
+                  height="315"
+                  src="https://www.youtube.com/embed/NgZMpMsef-c"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+              </div>
+              <div class="card-body tmst" style="background-color: #9edda9">
+                <h5 class="card-title">ETHERMA : INTRO</h5>
+              </div>
             </div>
-            <div class="card-body tmst" style="background-color: #f4ffb1">
-              <h5 class="card-title">PENSI OFFLINE ATAU ONLINE?</h5>
+          </div>
+          <div class="col-sm-12 col-md-6 col-lg-3">
+            <div class="card" data-aos="fade-up">
+              <div class="ratio ratio-16x9">
+                <iframe
+                  width="560"
+                  height="315"
+                  src="https://www.youtube.com/embed/BMdw92c2I78"
+                  title="YouTube video player"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+              </div>
+              <div class="card-body tmst" style="background-color: #f4ffb1">
+                <h5 class="card-title">PENSI OFFLINE ATAU ONLINE?</h5>
+              </div>
             </div>
           </div>
         </div>
