hapus2in img gaperlu

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
                 ></iframe>
               </div>
               <div class="card-body tmst" style="background-color: #ffd596">
-                <h5 class="card-title">COMING SOON!</h5>
+                <h5 class="card-title">COMING 
+                  <br /> SOON!</h5>
               </div>
             </div>
           </div>
@@ -147,7 +148,8 @@
                 ></iframe>
               </div>
               <div class="card-body tmst" style="background-color: #9edda9">
-                <h5 class="card-title">ETHERMA : INTRO</h5>
+                <h5 class="card-title">ETHERMA : 
+                  <br /> INTRO</h5>
               </div>
             </div>
           </div>
