ganti video history 8andoeng

--- a/history.html
+++ b/history.html
@@ -64,7 +64,7 @@
           <div class="card">
             <!-- embed video atma 2016-->
             <div class="ratio ratio-16x9">
-              <iframe class="history-video" src="https://www.youtube.com/embed/DQ99tmlGXI4" title="YouTube video" allowfullscreen></iframe>
+              <iframe class="history-video" src="https://www.youtube.com/embed/QhOzJiKDYy8" title="YouTube video" allowfullscreen></iframe>
             </div>
             <!-- akhir embed video -->
           </div>
