--- a/index.html
+++ b/index.html
@@ -107,53 +107,53 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="img-fluid" src="img/slider/1.JPG" alt="" />
+          <img class="img-fluid" src="img/slider/1.JPG" alt="" >
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/2.JPG" alt="" />
+          <img class="img-fluid" src="img/slider/2.JPG" alt="" >
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/3.JPG" alt="" />
+          <img class="img-fluid" src="img/slider/3.JPG" alt="" >
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/4.JPG" alt="" />
+          <img class="img-fluid" src="img/slider/4.JPG" alt="" >
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/5.JPG" alt="" />
+          <img class="img-fluid" src="img/slider/5.JPG" alt="" >
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/6.jpg" alt="" />
+          <img class="img-fluid" src="img/slider/6.jpg" alt="" >
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/7.jpg" alt="" />
+          <img class="img-fluid" src="img/slider/7.jpg" alt="" >
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/8.JPG" alt="" />
+          <img class="img-fluid" src="img/slider/8.JPG" alt="" >
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/9.JPG" alt="" />
+          <img class="img-fluid" src="img/slider/9.JPG" alt="" >
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/10.JPG" alt="" />
+          <img class="img-fluid" src="img/slider/10.JPG" alt="" >
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/11.JPG" alt="" />
+          <img class="img-fluid" src="img/slider/11.JPG" alt="" >
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/12.JPG" alt="" />
+          <img class="img-fluid" src="img/slider/12.JPG" alt="" >
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/13.JPG" alt="" />
+          <img class="img-fluid" src="img/slider/13.JPG" alt="" >
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/14.JPG" alt="" />
+          <img class="img-fluid" src="img/slider/14.JPG" alt="" >
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/15.JPG" alt="" />
+          <img class="img-fluid" src="img/slider/15.JPG" alt="" >
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/16.JPG" alt="" />
-        </div>                        
+          <img class="img-fluid" src="img/slider/16.JPG" alt="" >
+        </div>                             
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
