--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
     <script src="https://kit.fontawesome.com/b249d00227.js" crossorigin="anonymous"></script>
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 
-    <!-- AoS -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-
     <!-- background video -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="jquery.mb.YTPlayer.js"></script>
@@ -85,7 +82,7 @@
     <!-- akhir about atma -->
 
     <!-- slider -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="background-color: rgba(99, 186, 198, 0.9)">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -103,57 +100,56 @@
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="13" aria-label="Slide 14"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="14" aria-label="Slide 15"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="15" aria-label="Slide 16"></button>
-
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="img-fluid" src="img/slider/1.JPG" alt="" >
+          <img class="img-fluid" src="img/slider/1.JPG" alt="" />
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/2.JPG" alt="" >
+          <img class="img-fluid" src="img/slider/2.JPG" alt="" />
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/3.JPG" alt="" >
+          <img class="img-fluid" src="img/slider/3.JPG" alt="" />
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/4.JPG" alt="" >
+          <img class="img-fluid" src="img/slider/4.JPG" alt="" />
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/5.JPG" alt="" >
+          <img class="img-fluid" src="img/slider/5.JPG" alt="" />
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/6.jpg" alt="" >
+          <img class="img-fluid" src="img/slider/6.jpg" alt="" />
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/7.jpg" alt="" >
+          <img class="img-fluid" src="img/slider/7.jpg" alt="" />
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/8.JPG" alt="" >
+          <img class="img-fluid" src="img/slider/8.JPG" alt="" />
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/9.JPG" alt="" >
+          <img class="img-fluid" src="img/slider/9.JPG" alt="" />
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/10.JPG" alt="" >
+          <img class="img-fluid" src="img/slider/10.JPG" alt="" />
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/11.JPG" alt="" >
+          <img class="img-fluid" src="img/slider/11.JPG" alt="" />
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/12.JPG" alt="" >
+          <img class="img-fluid" src="img/slider/12.JPG" alt="" />
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/13.JPG" alt="" >
+          <img class="img-fluid" src="img/slider/13.JPG" alt="" />
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/14.JPG" alt="" >
+          <img class="img-fluid" src="img/slider/14.JPG" alt="" />
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/15.JPG" alt="" >
+          <img class="img-fluid" src="img/slider/15.JPG" alt="" />
         </div>
         <div class="carousel-item">
-          <img class="img-fluid" src="img/slider/16.JPG" alt="" >
-        </div>                             
+          <img class="img-fluid" src="img/slider/16.JPG" alt="" />
+        </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -177,7 +173,7 @@
                 <iframe
                   width="560"
                   height="315"
-                  src="https://www.youtube.com/embed/YbbqUjFwz-g"
+                  src="https://www.youtube.com/embed/7WymqdnosNI"
                   title="YouTube video player"
                   frameborder="0"
                   allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -185,8 +181,10 @@
                 ></iframe>
               </div>
               <div class="card-body tmst" style="background-color: #ffd596">
-                <h5 class="card-title">COMING 
-                  <br /> SOON!</h5>
+                <h5 class="card-title">
+                  COMING <br />
+                  SOON!
+                </h5>
               </div>
             </div>
           </div>
@@ -204,8 +202,10 @@
                 ></iframe>
               </div>
               <div class="card-body tmst" style="background-color: #9edda9">
-                <h5 class="card-title">ETHERMA : 
-                  <br /> INTRO</h5>
+                <h5 class="card-title">
+                  ETHERMA : <br />
+                  INTRO
+                </h5>
               </div>
             </div>
           </div>
@@ -253,6 +253,9 @@
       navbarcollapse();
       muteVideo();
     </script>
+
+    <!-- AoS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({
