--- a/history.html
+++ b/history.html
@@ -20,6 +20,9 @@
     <!-- Favicon -->
     <link rel="shortcut icon" href="img/favicon.ico" />
 
+    <!-- AoS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <title>Atma Asta</title>
   </head>
   <body>
@@ -177,7 +180,6 @@
     </script>
 
     <!-- AoS -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init({
